# access-your-heart

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  egress.nginx.conf
backend/: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
backend/app/: consts.py  main.py  models.py  queries.py
backend/db/: insert_data.py
backend/requirements/: base.txt  dev.txt  test.txt
data/: agh_syllabus.tsv
db/: Dockerfile  insert_data.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: AdvancedForm.tsx  App.tsx  Chat.tsx  CitiesStep.tsx  HaveQualification.tsx  Heading.tsx  HobbiesStep.tsx  ProfessionForHobbyButton.tsx  ProfessionsForHobbies.tsx  ProfessionsStep.tsx  SkillsStep.tsx  TimeSpentStep.tsx  constants.ts  index.css  language-dropdown.tsx
frontend/src/components/ui/: SearchPage.tsx  SearchResults.tsx  command.tsx  dialog.tsx  multiselect.tsx
frontend/src/lib/: utils.ts
scrapping/: polon_course_list_api.py
